<resources>
    <string name="app_name">Presupuestos  Lircayhub</string>

    <string name="developer">Creado por Ariel Fuentes</string>

    <string name="Menu1">Ajustes</string>
    <string name="Menu2">Inicio</string>
    <string name="Menu3">Mapa</string>
    <string name="Menu4">Indicadores</string>
    <string name="Menu5">Gastos</string>

    <string name="Indicador1">UF</string>
    <string name="Indicador2">Dolar</string>
    <string name="Indicador3">Feriado</string>

    <string name="Gastos">Gastos: </string>

    <string name="Cat_Arriendo">Arriendo o Hipoteca</string>
    <string name="Cat_Alimentacion">Alimentación</string>
    <string name="Cat_Transporte">Transporte</string>
    <string name="Cat_Servicios">Servicios básicos</string>
    <string name="Cat_Educacion">Educación</string>
    <string name="Cat_Deudas">Deudas</string>
    <string name="Cat_Ahorros">Ahorros e Inversiones</string>

    <string name="Boton_de_mas_gastos">Crear Gasto</string>

    <string name="Nombre_Gastos">Nombre</string>
    <string name="Monto">Monto: </string>
    <string name="Num_Monto">---.---.---</string>
    <string name="Fecha_Gastos">Fecha: </string>
    <string name="Num_Fecha">##/##/##</string>
    <string name="Latitud">Latitud: </string>
    <string name="Num_Latitud">##-##-##</string>
    <string name="Longitud">Longitud: </string>
    <string name="Num_Longitud">##-##-##-##</string>
    <string name="Categoria">Categoria: </string>
    <string name="Nom_Categoria">Otros</string>

    <string name="btnEditar">Editar</string>
    <string name="btnEliminar">Eliminar</string>
    <string name="btnGuardar">Guardar</string>

    <string name="Guargar">Guardar</string>
    <string name="Cancelar">Cancelar</string>

    <string name="title_activity_settings">Configuración</string>
    <string name="PresupuestoTotal">Presupuesto Total</string>
    <string name="SuPresupuesto">Su presupuesto es:</string>

    <string name="Dia_de_reinicio">Dia en que se reiniciara los gastos</string>
    <string name="Dias_entity">Dias</string>

    <string-array name="dias_entries">
        <item>El dia 1 del mes</item>
        <item>El dia 15 del mes</item>
        <item>El dia 25 del mes</item>
        <item>El dia ultimo dia del mes</item>
    </string-array>
    <string-array name="dias_values">
        <item>El dia 1 del mes</item>
        <item>El dia 15 del mes</item>
        <item>El dia 25 del mes</item>
        <item>El dia ultimo dia del mes</item>
    </string-array>

    <string name="TituloResumen">Resumen</string>
    <string name="PresupuestoGastos">Presupuestos / Gastos</string>
    <string name="PresupuestoTotal2">Presupuesto Total: </string>

    <string name="PresupuestoCategoria">Presupuesto por categoria</string>
    <string name="PresupuestoAriendo">Presupuesto para arriendo:</string>
    <string name="PresupuestoAlimentacion">Presupuesto para alimentación:</string>
    <string name="PresupuestoTransporte">Presupuesto para transporte:</string>
    <string name="PresupuestoServiciosBasicos">Presupuesto para servicios básicos:</string>
    <string name="PresupuestoEducacion">Presupuesto para educación:</string>
    <string name="PresupuestoDeudas">Presupuesto para deudas:</string>
    <string name="PresupuestoAhorro">Presupuesto para ahorro:</string>
    <string name="PresupuestoOtros">Presupuesto para otros:</string>

    <string-array name="LisCategorias">
        <item>Seleciones una categoria</item>
        <item>Arriendo o Hipoteca</item>
        <item>Alimentación</item>
        <item>Transporte</item>
        <item>Servicios básicos</item>
        <item>Educación</item>
        <item>Deudas</item>
        <item>Ahorros e Inversiones</item>
        <item>Otros</item>
    </string-array>


    <string name="title_activity_menu">Menu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>