<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/PresupuestoTotal">

        <EditTextPreference
            app:key="presupuestoall"
            app:title="@string/SuPresupuesto"
            app:defaultValue="0"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:key="diasdereinicio"
            app:title="@string/Dia_de_reinicio"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="El dia 15 del mes"
            app:entries="@array/dias_entries"
            app:entryValues="@array/dias_values"
            />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/PresupuestoCategoria">

        <EditTextPreference
            android:key="PresuArriedo"
            android:title="@string/PresupuestoAriendo"
            app:defaultValue="0"
            app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
            android:key="PresuAlimentacion"
            android:title="@string/PresupuestoAlimentacion"
            app:defaultValue="0"
            app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
            android:key="PresuTransporte"
            android:title="@string/PresupuestoTransporte"
            app:defaultValue="0"
            app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
            android:key="PresuServBasicos"
            android:title="@string/PresupuestoServiciosBasicos"
            app:defaultValue="0"
            app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
            android:key="PresuEducacion"
            android:title="@string/PresupuestoEducacion"
            app:defaultValue="0"
            app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
            android:key="PresuDeudas"
            android:title="@string/PresupuestoDeudas"
            app:defaultValue="0"
            app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
            android:key="PresuAhorro"
            android:title="@string/PresupuestoAhorro"
            app:defaultValue="0"
            app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
            android:key="PresuOtros"
            android:title="@string/PresupuestoOtros"
            app:defaultValue="0"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>
</PreferenceScreen>