<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearGastos">

        <EditText
            android:id="@+id/nombreproducto"
            android:layout_width="0dp"
            android:layout_height="57dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="53dp"
            android:hint="@string/Nombre_Gastos"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imagendeproducto"
            app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imagendeproducto"
        android:layout_width="69dp"
        android:layout_height="68dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="26dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cat_otros" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="301dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreproducto">

        <LinearLayout
            android:id="@+id/Enunciados"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Monto"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:text="@string/Monto"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Fecha"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:text="@string/Fecha_Gastos"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Latitud"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:text="@string/Latitud"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Longitud"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:text="@string/Longitud"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Categoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Categoria"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/editables"
            android:layout_width="227dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="-6dp"
            android:layout_toEndOf="@+id/Enunciados"
            android:orientation="vertical">

            <EditText
                android:id="@+id/numeromonto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Num_Monto"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/numeroFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Num_Fecha"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/numlatitud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Num_Latitud"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/numlongitud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Num_Longitud"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spicategorias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="329dp"
        android:layout_height="164dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.054">

        <Button
            android:id="@+id/btnEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:contentDescription="Boton de editar"
            android:drawableTint="#FFFFFF"
            android:text="@string/Guargar"
            android:textSize="20sp"
            app:cornerRadius="25dp" />

        <Button
            android:id="@+id/cancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="Boton de editar"
            android:drawableTint="#FFFFFF"
            android:onClick="Cancelar"
            android:text="@string/Cancelar"
            android:textSize="20sp"
            app:cornerRadius="25dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>