<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearGastos">

    <EditText
        android:id="@+id/nombregastos"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="53dp"
        android:hint="@string/Nombre_Gastos"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imagengastos"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imagengastos"
        android:layout_width="69dp"
        android:layout_height="68dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="52dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cat_otros" />

    <LinearLayout
        android:id="@+id/relativeLayout"
        android:layout_width="379dp"
        android:layout_height="317dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombregastos"
        app:layout_constraintVertical_bias="0.2">

        <LinearLayout
            android:id="@+id/Enunciados"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Monto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="17dp"
                android:text="@string/Monto"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Fecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="20dp"
                android:text="@string/Fecha_Gastos"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Categoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="15dp"
                android:text="@string/Categoria"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Latitud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="11dp"
                android:text="@string/Latitud"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Longitud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="11dp"
                android:text="@string/Longitud"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/editables"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/numeromonto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Num_Monto"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnfecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:onClick="mostrarcalendario"
                    app:srcCompat="@drawable/btn_fecha" />

                <TextView
                    android:id="@+id/numerofecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="13"
                    android:hint="@string/Num_Fecha"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Spinner
                android:id="@+id/spicategorias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/longitudeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="11dp"
                android:contentDescription="longitud"
                android:hint="@string/Num_Longitud"
                android:onClick="mostrarcalendario"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/latitudeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="11dp"
                android:contentDescription="latitud"
                android:hint="@string/Num_Latitud"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="151dp"
        android:layout_height="65dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="Boton de Guardar"
        android:drawableLeft="@drawable/icon_guardar"
        android:drawableTint="#FFFFFF"
        android:text="@string/btnGuardar"
        android:textAlignment="center"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="64dp"
        android:clickable="true"
        android:src="@drawable/icon_editar"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnEliminar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnEliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="64dp"
        android:clickable="true"
        android:src="@drawable/icon_eliminar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnEditar"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>